app/globals.css
:root {
  --font-primary: hsla(227, 62%, 80%, 1);
  --font-secondary: hsla(349, 42%, 80%, 1);
  --font-third: hsla(290, 14%, 80%, 1);

  --primary: hsla(216, 86%, 23%, 1);
  --primary-alt: hsla(201, 75%, 38%, 1);
  --primary-alt-2: hsla(191, 68%, 53%, 1);
  --primary-back: hsla(227, 62%, 10%, 1);

  --secondary: hsla(0, 43%, 17%, 1);
  --secondary-back: hsla(349, 42%, 13%, 1);

  --third: hsla(333, 42%, 25%, 1);
  --third-alt: hsla(7, 91%, 66%, 1);
  --third-back: hsla(290, 14%, 9%, 1);

  --error: rgb(178, 20, 46);
  --success: hsla(137, 90%, 51%, 1);
  --warn: hsla(43, 90%, 51%, 1);

  --gray-2: hsla(0, 0%, 31%, 1);
  --gray-3: hsla(0, 0%, 51%, 1);
  --gray-6: hsla(0, 0%, 95%, 1);

  --radius: 7px;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

body {
  display: flex;
  position: relative;
  height: 100vh;
}

a {
  color: inherit;
  text-decoration: none;
}

form {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  max-width: 600px;
  margin: auto;
  height: 100%;
}

form h1 {
  margin: 2rem 0;
}

form .row {
  display: flex;
  width: 100%;
  align-items: end;
  gap: 1rem;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

.error {
  color: var(--error);
}

.container {
  width: 100%;
  padding: 50px;
  overflow-y: scroll;
}

